Bug 1934331 - Update metadata for  /streams/readable-byte-streams/patched-global.any.* r=CosminS
Differential Revision: https://phabricator.services.mozilla.com/D230735

UltraBlame original commit: d50ef599450d47560a95040dcd270370ef7eb153

--- a/testing/web-platform/meta/streams/readable-byte-streams/patched-global.any.js.ini
+++ b/testing/web-platform/meta/streams/readable-byte-streams/patched-global.any.js.ini
@@ -2,69 +2,50 @@
   expected: ERROR
 
 [patched-global.any.html]
+  expected:
+    if debug: CRASH
   [Patched then() sees byobRequest after filling all pending pull-into descriptors]
     expected: FAIL
 
 
 [patched-global.any.sharedworker.html]
+  expected:
+    if debug: CRASH
   [Patched then() sees byobRequest after filling all pending pull-into descriptors]
     expected: FAIL
 
 
 [patched-global.any.serviceworker.html]
   expected:
-    if debug and (os == "android") and sessionHistoryInParent: [ERROR, CRASH, OK]
-    if debug and (os == "android") and not sessionHistoryInParent: [ERROR, CRASH, OK]
-    if debug and (os == "mac"): [CRASH, OK, ERROR]
-    if not debug: [OK, ERROR, CRASH]
-    [ERROR, OK, CRASH]
+    if debug: ERROR
   [Patched then() sees byobRequest after filling all pending pull-into descriptors]
     expected: FAIL
 
 
 [patched-global.any.worker.html]
   expected:
-    if (os == "linux") and debug and fission: [ERROR, OK, CRASH]
-    if (os == "linux") and debug and not fission: [CRASH, OK, ERROR]
-    [OK, ERROR, CRASH]
+    if (os == "android") and debug and sessionHistoryInParent: ERROR
   [Patched then() sees byobRequest after filling all pending pull-into descriptors]
     expected: FAIL
 
 
 [patched-global.any.shadowrealm-in-window.html]
-  expected:
-    if debug and (os == "android") and sessionHistoryInParent: [ERROR, CRASH]
-    if debug and (os == "android") and not sessionHistoryInParent: [ERROR, CRASH]
-    if debug and (os == "linux"): [ERROR, CRASH]
-    ERROR
+  expected: ERROR
 
 [patched-global.any.shadowrealm-in-dedicatedworker.html]
-  expected:
-    if not debug: ERROR
-    [ERROR, CRASH]
+  expected: ERROR
 
 [patched-global.https.any.shadowrealm-in-audioworklet.html]
-  expected:
-    if (os == "android") and debug and sessionHistoryInParent: [ERROR, CRASH]
-    if (os == "android") and debug and not sessionHistoryInParent: [ERROR, CRASH]
-    if os == "linux": [ERROR, CRASH]
-    ERROR
+  expected: ERROR
 
 [patched-global.any.shadowrealm-in-shadowrealm.html]
-  expected:
-    if debug and (os == "win") and (processor == "x86_64"): ERROR
-    if debug and (os == "mac"): ERROR
-    if not debug: ERROR
-    [ERROR, CRASH]
+  expected: ERROR
 
 [patched-global.any.shadowrealm-in-sharedworker.html]
-  expected:
-    if debug and (os == "win") and (processor == "x86"): ERROR
-    if debug and (os == "linux") and not fission: ERROR
-    if not debug: ERROR
-    [ERROR, CRASH]
+  expected: ERROR
 
 [patched-global.https.any.shadowrealm-in-serviceworker.html]
   expected:
-    if not fission and not debug and (os == "linux"): [TIMEOUT, ERROR]
-    [ERROR, TIMEOUT]
+    if (os == "linux") and not debug and not asan and tsan: TIMEOUT
+    if (os == "linux") and not debug and asan: TIMEOUT
+    ERROR
