--- a/testing/web-platform/meta/streams/readable-byte-streams/patched-global.any.js.ini
+++ b/testing/web-platform/meta/streams/readable-byte-streams/patched-global.any.js.ini
@@ -1,5 +1,5 @@
 [patched-global.any.shadowrealm.html]
-  expected: ERROR
+  expected: [ERROR, CRASH]
 
 [patched-global.any.html]
   expected:
@@ -17,35 +17,34 @@
 
 [patched-global.any.serviceworker.html]
   expected:
-    if debug: ERROR
+    if debug: [ERROR, CRASH]
   [Patched then() sees byobRequest after filling all pending pull-into descriptors]
     expected: FAIL
 
 
 [patched-global.any.worker.html]
-  expected:
-    if (os == "android") and debug and sessionHistoryInParent: ERROR
+  expected: [OK, ERROR, CRASH]
   [Patched then() sees byobRequest after filling all pending pull-into descriptors]
     expected: FAIL
 
 
 [patched-global.any.shadowrealm-in-window.html]
-  expected: ERROR
+  expected: [ERROR, CRASH]
 
 [patched-global.any.shadowrealm-in-dedicatedworker.html]
-  expected: ERROR
+  expected: [ERROR, CRASH]
 
 [patched-global.https.any.shadowrealm-in-audioworklet.html]
-  expected: ERROR
+  expected: [ERROR, CRASH]
 
 [patched-global.any.shadowrealm-in-shadowrealm.html]
-  expected: ERROR
+  expected: [ERROR, CRASH]
 
 [patched-global.any.shadowrealm-in-sharedworker.html]
-  expected: ERROR
+  expected: [ERROR, CRASH]
 
 [patched-global.https.any.shadowrealm-in-serviceworker.html]
   expected:
-    if (os == "linux") and not debug and not asan and tsan: TIMEOUT
-    if (os == "linux") and not debug and asan: TIMEOUT
+    if (os == "linux"): [TIMEOUT, ERROR]
+    if (os == "android") and debug and sessionHistoryInParent: [ERROR, CRASH]
     ERROR
