Bug 1934409 - [wpt-sync] Update web-platform-tests to 76dfa54e5df7f8cee7501cc6d598cf647c2b8564, a=testonly
MANUAL PUSH: wpt sync bot

wpt-head: 76dfa54e5df7f8cee7501cc6d598cf647c2b8564
wpt-type: landing

UltraBlame original commit: b1a084a7bffe3990011ab6ffdcbe2acb28071d0c

--- a/testing/web-platform/meta/streams/readable-byte-streams/patched-global.any.js.ini
+++ b/testing/web-platform/meta/streams/readable-byte-streams/patched-global.any.js.ini
@@ -3,7 +3,8 @@
 
 [patched-global.any.html]
   expected:
-    if debug: CRASH
+    if debug and sessionHistoryInParent: CRASH
+    if debug and not sessionHistoryInParent: ERROR
   [Patched then() sees byobRequest after filling all pending pull-into descriptors]
     expected: FAIL
 
