--- a/testing/web-platform/meta/css/css-view-transitions/navigation/pagereveal-no-view-transition-new-opt-out.html.ini
+++ b/testing/web-platform/meta/css/css-view-transitions/navigation/pagereveal-no-view-transition-new-opt-out.html.ini
@@ -1,5 +1,7 @@
 [pagereveal-no-view-transition-new-opt-out.html]
   expected:
-    if (os == "linux") and not debug and asan and fission: [ERROR, TIMEOUT]
+    if (os == "linux") and not debug and asan and fission: [TIMEOUT, ERROR]
     if (os == "linux") and debug: [ERROR, TIMEOUT]
     ERROR
+  [\n  View transitions: null event.viewTransition when new page removes opt-in\n  before pagereveal\n]
+    expected: TIMEOUT
