--- a/testing/web-platform/meta/fedcm/lfedcm-identity.discovery.tentative.sub.https.html.ini
+++ b/testing/web-platform/meta/fedcm/lfedcm-identity.discovery.tentative.sub.https.html.ini
@@ -1,30 +1,31 @@
 [lfedcm-identity.discovery.tentative.sub.https.html]
   expected:
-    if (os == "linux") and fission and not asan and not tsan: [TIMEOUT, OK]
-    if (os == "win") and (processor == "x86_64") and not debug: TIMEOUT
-    if (os == "win") and (processor == "x86"): [TIMEOUT, OK]
-    if (os == "linux") and not fission: OK
+    if fission and (os == "linux") and not asan and not tsan: [TIMEOUT, OK]
+    if fission and (os == "win") and not debug: TIMEOUT
+    if not fission: OK
     [OK, TIMEOUT]
   [Cross-origin identity credential discovery does not resolve with effective store from the wrong origin]
     expected:
-      if (os == "linux") and fission and not asan and tsan: [PASS, TIMEOUT]
-      if (os == "linux") and fission and not asan and not tsan: [NOTRUN, PASS, TIMEOUT]
-      if (os == "win") and (processor == "x86_64") and not debug: [NOTRUN, TIMEOUT]
-      if (os == "win") and (processor == "x86"): [TIMEOUT, PASS, NOTRUN]
-      if (os == "mac") and debug: [PASS, TIMEOUT]
-      if (os == "linux") and not fission: PASS
+      if fission and (os == "linux") and not asan and tsan: [PASS, TIMEOUT]
+      if fission and (os == "linux") and not asan and not tsan: [NOTRUN, PASS, TIMEOUT]
+      if fission and (os == "win") and not debug: [NOTRUN, TIMEOUT]
+      if fission and (os == "mac") and debug: [PASS, TIMEOUT]
+      if not fission: PASS
       [PASS, TIMEOUT, NOTRUN]
 
   [Cross-origin identity credential discovery does not resolve with ineffective store from the right origin]
     expected:
-      if (os == "linux") and fission and not asan and tsan: PASS
       if (os == "linux") and fission and not asan and not tsan: [NOTRUN, TIMEOUT]
-      if (os == "win") and not debug and (processor == "x86_64"): [TIMEOUT, PASS, NOTRUN]
-      if (os == "mac") and debug: PASS
-      if (os == "linux") and not fission: PASS
-      [PASS, TIMEOUT]
+      if (os == "linux") and fission and asan: [PASS, TIMEOUT]
+      if (os == "win") and debug: [PASS, TIMEOUT]
+      if (os == "win") and not debug: [TIMEOUT, PASS, NOTRUN]
+      if (os == "mac") and not debug: [PASS, TIMEOUT]
 
   [Cross-origin identity credential discovery works using the effectiveQueryURL]
     expected:
-      if (os == "linux") and fission and not asan and not tsan: [TIMEOUT, PASS]
+      if (os == "linux") and fission and not asan and not tsan: [NOTRUN, PASS, TIMEOUT]
       if (os == "win") and not debug: [PASS, TIMEOUT]
+
+  [Origin inferred from loginURL for discovery]
+    expected:
+      if (os == "linux") and fission and not asan and not tsan: TIMEOUT
