--- a/testing/web-platform/meta/html/cross-origin-opener-policy/tentative/restrict-properties/iframe-popup-to-un.https.html.ini
+++ b/testing/web-platform/meta/html/cross-origin-opener-policy/tentative/restrict-properties/iframe-popup-to-un.https.html.ini
@@ -21,6 +21,8 @@
 
 
 [iframe-popup-to-un.https.html?5-6]
+  expected:
+    if (os == "android") and sessionHistoryInParent and not debug: [OK, ERROR]
   [COOP: restrict-properties to popup COOP: unsafe-none via an iframe, with same site iframe, same site popup with window_open]
     expected: FAIL
 
