--- a/testing/web-platform/meta/webrtc/protocol/codecs-filtered-by-direction.https.html.ini
+++ b/testing/web-platform/meta/webrtc/protocol/codecs-filtered-by-direction.https.html.ini
@@ -1,10 +1,14 @@
 [codecs-filtered-by-direction.https.html]
   [Codecs get filtered by direction for sendonly]
     expected:
+      if (os == "win") and debug and (processor == "x86"): FAIL
+      if (os == "win") and not debug and (processor == "x86_64"): FAIL
       if (os == "mac") and not debug: [PASS, FAIL]
       if os == "android": FAIL
 
   [Codecs get filtered by direction for recvonly]
     expected:
+      if (os == "win") and debug and (processor == "x86"): FAIL
+      if (os == "win") and not debug and (processor == "x86_64"): FAIL
       if (os == "mac") and not debug: [PASS, FAIL]
       if os == "android": FAIL
