--- a/testing/web-platform/meta/webrtc/protocol/rtp-demuxing.html.ini
+++ b/testing/web-platform/meta/webrtc/protocol/rtp-demuxing.html.ini
@@ -1,5 +1,14 @@
 [rtp-demuxing.html]
+  expected:
+    if (os == "linux") and not debug and not asan and not tsan: TIMEOUT
   [Can demux two video tracks with different payload types on a bundled connection]
     expected:
+      if (os == "linux") and not debug and not asan and not tsan: TIMEOUT
+      if (os == "win") and debug and (processor == "x86"): FAIL
+      if (os == "win") and not debug and (processor == "x86_64"): FAIL
       if (os == "mac") and not debug: [PASS, FAIL]
       if os == "android": FAIL
+
+  [Can demux two video tracks with the same payload type on an unbundled connection]
+    expected:
+      if (os == "linux") and not debug and not asan and not tsan: NOTRUN
