Bug 1934409 - Fixup metadata CLOSED TREE
Differential Revision: https://phabricator.services.mozilla.com/D230798

UltraBlame original commit: 0afae617d122369d2284d9138d8b257cdb75867c

--- a/testing/web-platform/meta/streams/readable-byte-streams/patched-global.any.js.ini
+++ b/testing/web-platform/meta/streams/readable-byte-streams/patched-global.any.js.ini
@@ -3,8 +3,7 @@
 
 [patched-global.any.html]
   expected:
-    if debug and sessionHistoryInParent: CRASH
-    if debug and not sessionHistoryInParent: ERROR
+    if debug: [CRASH, ERROR]
   [Patched then() sees byobRequest after filling all pending pull-into descriptors]
     expected: FAIL
 
@@ -46,6 +45,5 @@
 
 [patched-global.https.any.shadowrealm-in-serviceworker.html]
   expected:
-    if (os == "linux"): [TIMEOUT, ERROR]
-    if (os == "android") and debug and sessionHistoryInParent: [ERROR, CRASH]
+    if debug: [CRASH, ERROR, TIMEOUT]
     ERROR
