--- a/testing/web-platform/meta/webdriver/tests/classic/perform_actions/pointer_pen.py.ini
+++ b/testing/web-platform/meta/webdriver/tests/classic/perform_actions/pointer_pen.py.ini
@@ -1,7 +1,9 @@
 [pointer_pen.py]
   [test_null_response_value]
-    expected:
-      ERROR
+    expected: FAIL
+
+  [test_pointer_down_closes_browsing_context]
+    expected: FAIL
 
   [test_pen_pointer_in_shadow_tree[outer-open\]]
     expected: FAIL
