--- a/.cron.yml
+++ b/.cron.yml
@@ -34,6 +34,34 @@ jobs:
                   - {hour: 10, minute: 0}
                   - {hour: 22, minute: 0}
 
+    - name: merge-beta-to-release-dry-run
+      job:
+          type: trigger-action
+          action-name: merge-automation
+          include-cron-input: false
+          extra-input:
+              force-dry-run: true
+              behavior: beta-to-release
+              push: true
+      run-on-projects:
+          - mozilla-beta
+      when:
+          - {weekday: "Friday", hour: 7, minute: 0}
+
+    - name: merge-central-to-beta-dry-run
+      job:
+          type: trigger-action
+          action-name: merge-automation
+          include-cron-input: false
+          extra-input:
+              force-dry-run: true
+              behavior: central-to-beta
+              push: true
+      run-on-projects:
+          - mozilla-central
+      when:
+          - {weekday: "Friday", hour: 7, minute: 0}
+
     - name: nightly-desktop
       job:
           type: decision-task
@@ -338,18 +366,6 @@ jobs:
           action-name: scriptworker-canary
           include-cron-input: true
       when: []  # never (hook only)
-
-    - name: l10n-cross-channel
-      job:
-          type: decision-task
-          treeherder-symbol: l10n-cross-channel
-          target-tasks-method: l10n-cross-channel
-      run-on-projects:
-          - mozilla-central
-      when:
-          by-project:
-              mozilla-central: [{hour: 11, minute: 0}, {hour: 23, minute: 0}]
-              default: []
 
     - name: eslint-build
       job:
