--- a/browser/components/customizableui/test/browser.toml
+++ b/browser/components/customizableui/test/browser.toml
@@ -48,6 +48,7 @@ skip-if = ["os == 'mac' && debug"]
 ["browser_873501_handle_specials.js"]
 
 ["browser_876926_customize_mode_wrapping.js"]
+skip-if = ["os == 'linux' && os_version == '18.04' && processor == 'x86_64' && release_or_beta"] # bug 1921617
 
 ["browser_876944_customize_mode_create_destroy.js"]
 
@@ -360,6 +361,8 @@ skip-if = [
 ]
 
 ["browser_unified_extensions_reset.js"]
+
+["browser_vertical_tabs_customize_navbar.js"]
 
 ["browser_widget_animation.js"]
 
