--- a/toolkit/components/search/tests/xpcshell/xpcshell.toml
+++ b/toolkit/components/search/tests/xpcshell/xpcshell.toml
@@ -199,6 +199,8 @@ support-files = [
 
 ["test_sendSubmissionURL.js"]
 
+["test_settings_corrupt.js"]
+
 ["test_settings_migrate_11.js"]
 support-files = [
   "icons/remoteIcon.ico",
@@ -255,6 +257,8 @@ support-files = [
 ["test_telemetry_event_default.js"]
 
 ["test_userEngine.js"]
+
+["test_userInstalledAppEngine.js"]
 
 ["test_validate_engines.js"]
 
